Updated the swagger file.
