# src/main/java/fr/mim/cl/server/controllers/DirectionController.java
@@ -1,22 +1,27 @@
 package fr.mim.cl.server.controllers;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 import fr.mim.cl.server.model.Path;
 import fr.mim.cl.server.model.Place;
 import fr.mim.cl.server.services.DirectionService;
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
 
 @RestController
 @RequestMapping("/api")
 public class DirectionController
 {
   private DirectionService directionService;
+  private static final Logger logger = LoggerFactory.getLogger(DirectionController.class);
 
   public DirectionController(DirectionService directionService)
   {
@@ -32,8 +37,12 @@ public class DirectionController
   }
 
   @GetMapping("/tsp")
-  public List<Path> getTravelingSalesMan(Set<Place> places)
+  @ApiOperation(value = "Do the tsp", nickname = "TSP", tags={ "Beers" })
+  @ApiResponses(value = {
+      @ApiResponse(code = 200, message = "Success") })
+  public List<Path> getTravelingSalesMan(List<Place> places)
   {
+    logger.info("{}", places);
     return directionService.getTravelingSalesMan(Collections.emptySet());
   }
 }
